Fix spacing issue with score image

--- a/css/master.css
+++ b/css/master.css
@@ -55,8 +55,16 @@ h3 {
   position: absolute;
   top: 200px;
   left: 80px;
-  width: 600px;
-  height: auto;
+  width: 400px;
+  height: 600px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+#score h3 {
+  text-align: center;
+  font-size: 40px;
 }
 
 .row {
@@ -77,12 +85,15 @@ h3 {
   }
 
   #score div {
+    display: inline;
+    height: 300px;
+    width: 100px;
     padding: 80px;
+    margin: 0 auto;
     background-color: white;
-    width: auto;
-    height: 400px;
     background-repeat: no-repeat;
     background-size: contain;
+    background-position: center;
   }
 
 .image-2 {
